# timing-cli

./: .gitignore  CHANGELOG.md  DOLT_REMOTE.md  LICENSE  README.md  cliff.toml  manifest  pyproject.toml
.beads/: config.yaml  interactions.jsonl  metadata.json
.beads/hooks/: prepare-commit-msg
.github/workflows/: ci.yml  release.yml
tests/: test_analysis.py  test_api.py  test_cli.py  test_db.py  test_serve.py  test_timing_predicates.py
timing_cli/: __init__.py  analysis.py  api.py  cli.py  config.py  db.py  models.py  output.py  rules.py  serve.py  timing_predicates.py
